--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "latest",
-    "babel-loader": "latest",
     "@babel/preset-env": "latest",
     "@babel/register": "latest",
+    "babel-loader": "latest",
     "browser-sync": "latest",
     "browser-sync-webpack-plugin": "latest",
     "chai": "latest",
     "cordova": "latest",
+    "jquery": "^3.4.1",
     "mocha": "latest",
     "webpack": "latest",
     "webpack-cli": "latest"
